# pose-estimation

./: README.md  pyproject.toml
data/: motion_coach.db-shm  motion_coach.db-wal  template_profiles.json  templates.json  upload_index.json
docs/: architecture.md  mobile_strategy.md
mobile/: .gitignore  PERFORMANCE_GUIDE.md  README.md  SECURITY_AUDIT.md  analysis_options.yaml  pubspec.yaml
mobile/android/: key.properties.template
mobile/lib/: main.dart
mobile/test/: widget_test.dart
scripts/: enable_an_vi_voice.ps1
src/motion_api/: __init__.py  live_mediapipe.py  main.py  persistence.py  schemas.py  speaker.py  sync_video_dtw.py
src/motion_coach.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/motion_core/: __init__.py  dtw.py  exercise_tracking.py  features.py  mediapipe_pose.py  mediapipe_runtime.py  preprocessing.py  readiness.py  rep_cycle.py  template_profile.py  types.py  workout_orchestrator.py
src/motion_flow/: README.md  __init__.py  _core_bridge.py  alignment.py  example_workflow.py  features.py  feedback.py  models.py  orchestrator.py  pipeline.py  readiness.py  template_management.py  tracking.py  workout.py
tests/: test_dtw_window.py  test_exercise_tracking.py  test_features_unified.py  test_preprocessing.py  test_readiness.py  test_rep_cycle.py  test_workout_orchestrator.py
uploads/: 0bba3997-299e-415b-9489-6fe0dd82e793.webm  5b100a04-f278-435f-9188-5a68f6dbafa6.webm  5c0ad545-acf4-4629-800b-ab838547de78.webm  72dd242d-f74b-4b87-a7d3-dfab99c58a15.webm  8a4b6f85-ce0b-4c90-9d63-c9a28cad4433.webm
web/: index.html
(+88 files in other folders)
