[project]
name = "motion-coach"
version = "0.1.0"
description = "Pose-based motion coaching service with readiness gate and DTW alignment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "mediapipe==0.10.33",
  "opencv-python>=4.10.0",
  "protobuf>=4.25.3,<5",
  "numpy>=1.26.0",
  "pyttsx3>=2.90",
  "python-multipart>=0.0.9"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
